src/shared/ui/modal/modal.module.scss
.overlay {
	position: fixed;
	inset: 0;
	background-color: rgba(0, 0, 0, 0.5);
	backdrop-filter: blur(10px);
	z-index: 10;
}

.modalPosition {
	position: fixed;
	inset: 0;
	overflow-y: auto;
	z-index: 11;
}

.modalContainer {
	min-height: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	padding: 16px;
}

.modal {
	padding: 20px;
	border-radius: 10px;
	background-color: var(--primary);
	// box-shadow: 0px 0px 20px 0px rgba(76, 76, 76, 1);

	@media screen and (max-width: 768px) {
		padding: 10px;
	}
}

